WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307730
[AppKit Gestures] Click gestures should not prevent scroll/zoom gestures
https://bugs.webkit.org/show_bug.cgi?id=307730
Summary
[AppKit Gestures] Click gestures should not prevent scroll/zoom gestures
Abrar Rahman Protyasha
Reported
2026-02-12 17:43:38 PST
rdar://170277053
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2026-02-13 01:14:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58604
EWS
Comment 2
2026-02-13 15:14:40 PST
Committed
307519@main
(b1a015a4a92d): <
https://commits.webkit.org/307519@main
> Reviewed commits have been landed. Closing PR #58604 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug