[AppKit Gestures] Click gestures should not prevent scroll/zoom gestures https://bugs.webkit.org/show_bug.cgi?id=307730 rdar://170277053

Reviewed by Wenson Hsieh and Aditya Keerthi.

The scroll and magnification gestures musn't be prevented by our single
and secondary click gestures, or else we will see unexepcted stuttering
when panning. In this patch, we achieve said goal by implementing
gesture prevention delegate methods.

* Source/WebKit/Platform/spi/mac/AppKitSPI.h:
* Source/WebKit/UIProcess/mac/WKAppKitGestureController.mm:
(-[WKAppKitGestureController startMomentumIfNeededForGesture:]):
(-[WKAppKitGestureController interruptMomentumIfNeeded]):

Canonical link: https://commits.webkit.org/307519@main